--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                     <h2 class="font-plus-jakarta-sans font-bold text-2xl">Launch Career</h2>
           
                     <!-- Add Task Button  -->
-                    <!-- <button id="startButton" class="flex items-center justify-center bg-[#635fc7] hover:bg-purple-600 text-white font-medium py-3 px-4 rounded-full transition-colors">
+                    <button id="startButton" class="flex items-center justify-center bg-[#635fc7] hover:bg-purple-600 text-white font-medium py-3 px-4 rounded-full transition-colors">
                         <svg class="h-4 w-4 text-white" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path d="m11 11h-7.25c-.414 0-.75.336-.75.75s.336.75.75.75h7.25v7.25c0 .414.336.75.75.75s.75-.336.75-.75v-7.25h7.25c.414 0 .75-.336.75-.75s-.336-.75-.75-.75h-7.25v-7.25c0-.414-.336-.75-.75-.75s-.75.336-.75.75z" fill="currentColor"/>
                         </svg>
                         <span class="ml-2 font-plus-jakarta-sans ">Add New Task</span>
-                    </button> -->
+                    </button>
                 </div>
             </header>
             
