--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                     </button>
 
                     <!-- Add Board button -->
-                    <button class="flex items-center justify-center hover:bg-purple-600 text-white font-medium py-3 px-4 rounded-full transition-colors">
+                    <!-- <button class="flex items-center justify-center hover:bg-purple-600 text-white font-medium py-3 px-4 rounded-full transition-colors">
                         <svg class="h-4 w-4 text-white" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path d="m11 11h-7.25c-.414 0-.75.336-.75.75s.336.75.75.75h7.25v7.25c0 .414.336.75.75.75s.75-.336.75-.75v-7.25h7.25c.414 0 .75-.336.75-.75s-.336-.75-.75-.75h-7.25v-7.25c0-.414-.336-.75-.75-.75s-.75.336-.75.75z" fill="currentColor"/>
                         </svg>
                         <span class="ml-2">Add New Board</span>
-                    </button>
+                    </button> -->
                 </nav>
             </div>
         </div>
@@ -57,11 +57,11 @@
                     <h2 class="font-plus-jakarta-sans font-bold text-2xl">Launch Career</h2>
           
                     <!-- Add Task Button  -->
-                    <button id="startButton" class="flex items-center justify-center bg-[#635fc7] hover:bg-purple-600 text-white font-medium py-3 px-4 rounded-full transition-colors">
+                    <button id="addTaskButton" class="flex items-center justify-center bg-[#635fc7] hover:bg-purple-600 text-white font-medium py-3 px-4 rounded-full transition-colors">
                         <svg class="h-4 w-4 text-white" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path d="m11 11h-7.25c-.414 0-.75.336-.75.75s.336.75.75.75h7.25v7.25c0 .414.336.75.75.75s.75-.336.75-.75v-7.25h7.25c.414 0 .75-.336.75-.75s-.336-.75-.75-.75h-7.25v-7.25c0-.414-.336-.75-.75-.75s-.75.336-.75.75z" fill="currentColor"/>
                         </svg>
-                        <span class="ml-2 font-plus-jakarta-sans ">Add New Task</span>
+                        <span class="hidden md:ml-2 md:font-plus-jakarta-sans">Add New Task</span>
                     </button>
                 </div>
             </header>
@@ -119,8 +119,8 @@
 
     <!-- The model -->
     <div class="modal hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" id="task-modal">
-        <div class="bg-white rounded-lg p-6 max-w-md mx-3  w-[600px] h-[415px] top-[242px] left-[456px] rounded-[6px] opacity-100 transform-none">
-            <div class="modal-actions flex justify-between items-center mb-4">
+        <div class="bg-white rounded-lg p-8 max-w-md mx-3 w-[479px] h-[479px] rounded-[6px] opacity-100 transform-none">
+            <div class="modal-actions flex justify-between items-center mb-3">
                 <h2 id="modal-title" class="text-2xl font-bold font-plus-jakarta-sans text-gray-800">Task</h2>
                 <button type="button" class="py-2 text-3xl font-extrablack text-[#EA5555] hover:text-red-900" id="cancel-btn">×</button>
             </div>
@@ -129,10 +129,12 @@
                 <div class="form-group mb-4">
                     <label for="task-title" class="block text-sm font-medium font-plus-jakarta-sans text-gray-700 mb-1">Title</label>
                     <input type="text" id="task-title" required  class="w-full font-plus-jakarta-sans px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-600">
+                    <div class="error"></div>
                 </div>
                 <div class="form-group mb-4">
                     <label for="task-description" class="block text-sm font-plus-jakarta-sans  font-medium text-gray-700 mb-1">Description</label>
                     <textarea id="task-description" required class="w-full px-3 font-plus-jakarta-sans  py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-600 h-24"></textarea>
+                    <div class="error"></div>
                 </div>
                 <div class="form-group relative mb-6">
                     <label for="task-status" class="block text-sm font-medium font-plus-jakarta-sans text-gray-700 mb-1">Status</label>
@@ -141,11 +143,19 @@
                         <option class="bg-white text-gray-400 hover:bg-gray-900" value="doing">doing</option>
                         <option class="bg-white text-gray-400 hover:bg-gray-900" value="done">done</option>
                     </select>
+                    <div class="error"></div>
+                    <!-- Adding the submit button -->
+                    <button id="submitButton" type="submit" class="flex items-center justify-center bg-[#635fc7] hover:bg-purple-600 h-[40px] w-full text-white font-medium py-3 px-4 rounded-full transition-colors">
+                        <svg class="h-4 w-4 text-white" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path d="m11 11h-7.25c-.414 0-.75.336-.75.75s.336.75.75.75h7.25v7.25c0 .414.336.75.75.75s.75-.336.75-.75v-7.25h7.25c.414 0 .75-.336.75-.75s-.336-.75-.75-.75h-7.25v-7.25c0-.414-.336-.75-.75-.75s-.75.336-.75.75z" fill="currentColor"/>
+                        </svg>
+                        <span class="ml-2 font-plus-jakarta-sans ">Create Task</span>
+                </button>
                 </div>
             </form>
         </div>
     </div>
     <!-- Linking the Javacript to the html -->
-    <script src="scripts.js"></script>
+    <!-- <script src="scripts.js"></script> -->
 </body>
 </html>
