Implemented Add new task logic and uncommented the script tag in html
still not working

--- a/index.html
+++ b/index.html
@@ -156,6 +156,6 @@
         </div>
     </div>
     <!-- Linking the Javacript to the html -->
-    <!-- <script src="scripts.js"></script> -->
+    <script src="scripts.js"></script>
 </body>
 </html>
