--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <svg class="h-4 w-4 text-white" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path d="m11 11h-7.25c-.414 0-.75.336-.75.75s.336.75.75.75h7.25v7.25c0 .414.336.75.75.75s.75-.336.75-.75v-7.25h7.25c.414 0 .75-.336.75-.75s-.336-.75-.75-.75h-7.25v-7.25c0-.414-.336-.75-.75-.75s-.75.336-.75.75z" fill="currentColor"/>
                         </svg>
-                        <span class="hidden md:ml-2 md:font-plus-jakarta-sans">Add New Task</span>
+                        <span class="md:ml-2 md:font-plus-jakarta-sans">Add New Task</span>
                     </button>
                 </div>
             </header>
