--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
     <!-- The model -->
     <div class="Edit-modal hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" id="edit-task-modal">
-        <div class="bg-white rounded-lg p-8 max-w-md mx-3 w-[479px] h-[479px] rounded-[6px] opacity-100 transform-none">
+        <div class="bg-white rounded-lg p-8 max-w-md mx-3 w-[479px] h-[534px] lg:h-[479px] rounded-[6px] opacity-100 transform-none">
             <div class="Edit-modal-actions flex justify-between items-center mb-3">
                 <h2 id="Edit-modal-title" class="text-2xl font-bold font-plus-jakarta-sans text-gray-800">Task</h2>
                 <button type="button" class="py-2 text-3xl font-extrablack text-[#EA5555] hover:text-red-900" id="edit-cancel-btn">×</button>
@@ -175,12 +175,12 @@
                 <input type="hidden" id="task-id">
                 <div class="Edit-form-group mb-4">
                     <label for="task-title" class="block text-sm font-medium font-plus-jakarta-sans text-gray-700 mb-1">Title</label>
-                    <input type="text" id="edit-task-title" required  class="w-full font-plus-jakarta-sans px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-600">
+                    <input type="text" id="edit-task-title" placeholder="eg. I want to take a chilled break" required  class="w-full font-plus-jakarta-sans px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-600">
                     <div class="error"></div>
                 </div>
                 <div class="Edit-form-group mb-4">
                     <label for="task-description" class="block text-sm font-plus-jakarta-sans  font-medium text-gray-700 mb-1">Description</label>
-                    <textarea id="edit-task-description" required class="w-full px-3 font-plus-jakarta-sans  py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-600 h-24"></textarea>
+                    <textarea id="edit-task-description" placeholder="e.g Pet your dog, have a cup of coffee, dance to your favourite song and come back to crush this challenge." required class="w-full px-3 font-plus-jakarta-sans  py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-600 h-24"></textarea>
                     <div class="error"></div>
                 </div>
                 <div class="Edit-form-group relative mb-6">
@@ -193,12 +193,12 @@
                     <div class="error"></div>
                 </div>
                 <!-- Adding the submit button -->
-                <div class="flex items-center justify-center">
-                    <button id="SaveChangesBtn" type="submit" class="flex items-center justify-center bg-[#635fc7] hover:bg-[#A8A4FF] h-[40px] w-full text-white font-medium py-3 px-4 mt-2 mr-1 rounded-full transition-colors">
-                        <span class=" font-plus-jakarta-sans ">Save Changes</span>
+                <div class="flex flex-col lg:flex-row items-center justify-center">
+                    <button id="SaveChangesBtn" type="submit" class="flex items-center justify-center bg-[#635fc7] hover:bg-[#A8A4FF] h-[40px] w-full text-white font-medium py-3 px-4 mt-2 lg:mr-1 rounded-full transition-colors">
+                        <span class="font-plus-jakarta-sans ">Save Changes</span>
                     </button>
-                    <button id="DeleteTaskBtn" type="submit" class="flex items-center justify-center bg-[#EA5555] hover:bg-[#FF9898] h-[40px] w-full text-white font-medium py-3 px-4 mt-2 ml-1 rounded-full transition-colors">
-                        <span class=" font-plus-jakarta-sans ">Delete Task</span>
+                    <button id="DeleteTaskBtn" type="submit" class="flex items-center justify-center bg-[#EA5555] hover:bg-[#FF9898] h-[40px] w-full text-white font-medium py-3 px-4 mt-2 lg:ml-1 rounded-full transition-colors">
+                        <span class="font-plus-jakarta-sans ">Delete Task</span>
                     </button>
                 </div>
             </form>
