--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
                 <input type="hidden" id="task-id">
                 <div class="form-group mb-4">
                     <label for="task-title" class="block text-sm font-medium font-plus-jakarta-sans text-gray-700 mb-1">Title</label>
-                    <input type="text" id="task-title" required  class="w-full font-plus-jakarta-sans px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-600">
+                    <input type="text" id="task-title" required  placeholder="eg. I want to take a chilled break" class="w-full font-plus-jakarta-sans px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-600">
                     <div class="error"></div>
                 </div>
                 <div class="form-group mb-4">
                     <label for="task-description" class="block text-sm font-plus-jakarta-sans  font-medium text-gray-700 mb-1">Description</label>
-                    <textarea id="task-description" required class="w-full px-3 font-plus-jakarta-sans  py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-600 h-24"></textarea>
+                    <textarea id="task-description" required placeholder="e.g Pet your dog, have a cup of coffee, dance to your favourite song and come back to crush this challenge." class="w-full px-3 font-plus-jakarta-sans  py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-600 h-24"></textarea>
                     <div class="error"></div>
                 </div>
                 <div class="form-group relative mb-6">
